@@ -90,6 +90,7 @@
     <Content Include="Locale\french.xml" />
     <Content Include="Locale\italian.xml" />
     <Content Include="Locale\korean.xml" />
+    <Content Include="Locale\russian.xml" />
     <Content Include="Locale\spanish.xml" />
     <Content Include="Locale\swedish.xml" />
     <Content Include="PreviewImage.png" />
