@@ -1,4 +1,6 @@
+- Add Russian translation by vitalii201 
 - Update bundled CitiesHarmony to 1.0.5
+
 
 Version 1.0.2
 
